Fixed bugs, overflow, scrollbar

--- a/styles/cartStyle.css
+++ b/styles/cartStyle.css
@@ -4,23 +4,24 @@ fieldset {
 
 input {
     border: 1px solid black;
-    border-radius: 15px 15px;
+    border-radius: 25px;
+    width: 100%;
 }
 
-div ::-webkit-scrollbar,
-div ::-moz-scrollbar {
-    width: 18px;
-    height: 12px;
+div ::-webkit-scrollbar {
+    height: 24px;
 }
 
-div ::-webkit-scrollbar-track,
-div ::-moz-scrollbar-track {
-    background: rgba(0, 0, 0, 0.9);
+div ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,1); 
+    background-color: rgba(256, 256, 256, 1);
+    border-radius: 10px;
 }
 
-div ::-webkit-scrollbar-thumb,
-div ::-moz-scrollbar-thumb {
-    background: rgba(200, 200, 200, 0.75);
+div ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.8);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,1); 
 }
 
 #cart-section {
@@ -99,7 +100,7 @@ div ::-moz-scrollbar-thumb {
 
 #price-container {
     grid-column-start: 2;
-    grid-column-end: 9;
+    grid-column-end: 4;
     grid-row-start: 4;
     grid-row-end: 5;
     background: black;
@@ -110,6 +111,22 @@ div ::-moz-scrollbar-thumb {
     flex: 1 1 auto;
     justify-self: center;
     align-self: center;
+    color: white;
+    text-align: center;
+}
+
+#how-to-container {
+    grid-column: 4 / 9;
+    grid-row: 4 / 5;
+    background: black;
+    border-left: 0.5px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#how-to-header {
+    flex: 1 1 auto;
     color: white;
     text-align: center;
 }
@@ -142,7 +159,6 @@ div ::-moz-scrollbar-thumb {
     grid-column-end: 12;
     grid-row-start: 4;
     grid-row-end: 5;
-    font-size: 1.5rem;
     transition: background 0.75s;
 }
 
